Finish API integration

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -4,6 +4,7 @@
   border-radius: 8px
   box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1)
   background-color: #fff
+  margin: 0 auto
 
   &__header
     margin-bottom: 40px
