--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -41,11 +41,12 @@ body
   gap: 22px
 
 .auth
-  &__card
-    margin: 0 auto
-
   &__link
     font-size: 15px
 
   .btn
     margin-top: 28px
+
+.error
+  color: var(--color-danger)
+  margin: 16px 0
