--- a/src/components/FormInput/FormInput.sass
+++ b/src/components/FormInput/FormInput.sass
@@ -10,3 +10,11 @@
 
   &:focus
     border-bottom-color: var(--color-primary)
+
+  &__container
+    display: flex
+    flex-direction: column
+    gap: 8px
+
+  &__error
+    color: var(--color-danger)
